k8s_manifests/prod/istio-networking/app-ad-dest-rule-mtls.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "adservice-ad-destrule"
  namespace: "ad"
spec:
  host: "adservice.ad.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
