k8s_manifests/prod/istio-networking/app-cart-dest-rule-mtls.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "cartservice-cart-destrule"
  namespace: "cart"
spec:
  host: "cartservice.cart.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
