k8s_manifests/prod/istio-networking/app-productcatalog-dest-rule-mtls.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "productcatalogservice-product-catalog-destrule"
  namespace: "product-catalog"
spec:
  host: "productcatalogservice.product-catalog.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
