k8s_manifests/prod/istio-networking/app-recommendation-dest-rule-mtls.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "recommendationservice-recommendation-destrule"
  namespace: "recommendation"
spec:
  host: "recommendationservice.recommendation.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
