k8s_manifests/prod/istio-networking/app-redis-cart-dest-rule-mtls.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: "redis-cart-cart-destrule"
  namespace: "cart"
spec:
  host: "redis-cart.cart.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
